# c2-debug

./: .gitignore  Cargo.toml  README.md  test.sh
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  payload.rs
server/: Cargo.toml
server/src/: main.rs
web/: Cargo.toml
web/src/: main.rs
