[workspace]
members = [
    "server",
    "client", 
    "web",
    "common"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
ring = "0.17"
base64 = "0.21"
url = "2.4"
uuid = { version = "1.4", features = ["v4"] }
config = "0.13"

# Web framework dependencies
warp = "0.3"
tokio-tungstenite = "0.20"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }

# Async runtime
