[package]
name = "c2-web"
version = "0.1.0"
edition = "2021"

[dependencies]
c2-common = { path = "../common" }

# Web framework
warp = { workspace = true }

# Template engine
handlebars = "4.5"

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Async
tokio = { workspace = true, features = ["full"] }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }